--- a/packages/extension/src/pages/blocklist/style.module.scss
+++ b/packages/extension/src/pages/blocklist/style.module.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   margin: -8px;
-  width: 100vw;
+  width: var(--popup-size-width);
   height: 100vh;
 }
 
