--- a/packages/extension/src/styles/global.scss
+++ b/packages/extension/src/styles/global.scss
@@ -34,6 +34,7 @@ $body-color: black;
 
 html {
   width: $popup-size-width;
+  min-width: 360px;
   height: $popup-size-height;
   margin: auto;
   background-color: white;
@@ -43,6 +44,7 @@ html {
 
 body {
   width: $popup-size-width;
+  min-width: 360px;
   height: $popup-size-height;
 
   background-color: $background-color;
