feat: add restore

--- a/packages/extension/src/pages/lock/style.module.scss
+++ b/packages/extension/src/pages/lock/style.module.scss
@@ -7,3 +7,9 @@
 .capslock-tooltip-arrow {
   left: 10px !important;
 }
+
+.restore{
+  text-align: center;
+  margin-top: 10px;
+  color: #5e72e4;
+}
