feat: add restore and transtions

--- a/packages/extension/src/pages/lock/style.module.scss
+++ b/packages/extension/src/pages/lock/style.module.scss
@@ -13,3 +13,29 @@
   margin-top: 10px;
   color: #5e72e4;
 }
+.restoreTips{
+  margin-top: 10px;
+  text-align: center;
+  font-size: 0.875rem;
+  padding: 0 40px;
+  margin-bottom: 0;
+}
+.content{
+  font-size: 1.2rem;
+  margin-top: 20px;
+  text-align: center;
+}
+.title{
+  font-size: 1.6rem;
+  color: #f5365c;
+  text-align: center;
+}
+.info{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+.buttons{
+  margin-top: 40px;
+}
