--- a/packages/extension/src/styles/_var.scss
+++ b/packages/extension/src/styles/_var.scss
@@ -15,6 +15,7 @@ $main-card-padding: 16px;
     --popup-size-width: 360px;
     --large-container-width: 420px;
     --container-width: 420px;
+    --window-height: 580px;
   }
 }
 
@@ -23,5 +24,6 @@ $main-card-padding: 16px;
     --popup-size-width: 100vw;
     --large-container-width: 100vw;
     --container-width: 100vw;
+    --window-height: 100%;
   }
 }
