--- a/packages/extension/src/pages/transfer/style.module.scss
+++ b/packages/extension/src/pages/transfer/style.module.scss
@@ -39,3 +39,10 @@
   padding: 0 20px;
   
 }
+.viewAll{
+  text-align: center;
+  color: #5e72e4;
+  padding: 10px 0;
+  font-size: 1.25rem;
+  display: block;
+}
