fix: remove 0x privateKey string

--- a/packages/extension/src/pages/setting/export/style.module.scss
+++ b/packages/extension/src/pages/setting/export/style.module.scss
@@ -25,8 +25,8 @@
   &.alt-hex {
     word-break: break-all;
 
-    &::before {
-      content: "0x";
-    }
+    // &::before {
+    //   content: "0x";
+    // }
   }
 }
