--- a/packages/extension/src/pages/setting/keyring/style.module.scss
+++ b/packages/extension/src/pages/setting/keyring/style.module.scss
@@ -15,3 +15,13 @@
   padding: 0 $layout-padding;
   margin-bottom: $layout-padding;
 }
+
+.popmask{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  top: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.1);
+  z-index: 2;
+}
