--- a/packages/extension/src/layouts/header/style.module.scss
+++ b/packages/extension/src/layouts/header/style.module.scss
@@ -30,9 +30,9 @@ $menu-icon-gap: 14px;
   align-items: center;
 
   .title {
-    font-size: 24px;
+    font-size: 20px;
 
-    margin-right: 6px;
+    // margin-right: 6px;
   }
 
   .title-icon-container {
