--- a/packages/extension/src/pages/setting/keyring/style.module.scss
+++ b/packages/extension/src/pages/setting/keyring/style.module.scss
@@ -25,3 +25,18 @@
   background-color: rgba(0, 0, 0, 0.1);
   z-index: 2;
 }
+.lock{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 13px;
+  padding-right: 10px;
+
+}
+.lockBtn{
+  display: inline-block;
+  border: 1px solid #5e72e4;
+  border-radius: 30px;
+  padding: 0 10px;
+  color: #5e72e4;
+} 
