--- a/packages/extension/src/content-scripts/safe-inject/Drawer/drawer.scss
+++ b/packages/extension/src/content-scripts/safe-inject/Drawer/drawer.scss
@@ -38,6 +38,9 @@
 .modal-content {
   padding: 0 25px;
   line-height: 1.3;
+  p{
+    margin: 0;
+  }
   .prompt {
     width: 50px;
     height: 45px;
@@ -55,6 +58,7 @@
     margin-bottom: 14px;
     .value {
       color: #f03e3e;
+      word-break: break-all;
     }
   }
   .tips {
@@ -68,6 +72,7 @@
     font-weight: bold;
     color: #111111;
     line-height: 25px;
+    margin-top: 20px;
   }
   .danger-button {
     background: #f03e3e;
