fix: remove blockList server

--- a/packages/extension/src/content-scripts/safe-inject/Drawer/drawer.scss
+++ b/packages/extension/src/content-scripts/safe-inject/Drawer/drawer.scss
@@ -72,7 +72,7 @@
     font-weight: bold;
     color: #111111;
     line-height: 25px;
-    margin-top: 30px;
+    margin-bottom: 30px;
   }
   .danger-button {
     background: #f03e3e;
